--- a/templates/filter.html
+++ b/templates/filter.html
@@ -2,9 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Pricing Table</title>
+  <title>filtering Table</title>
   <style>
-    /* CSS styles omitted for brevity */
     html {
       box-sizing: border-box;
       font-family: 'Open Sans', sans-serif;
@@ -54,91 +53,91 @@
       z-index: 10;
     }
     
-    .pricing-table {
+    .filtering-table {
       box-shadow: 0px 10px 13px -6px rgba(0, 0, 0, 0.2), 0px 20px 31px 3px rgba(0, 0, 0, 0.2), 0px 8px 20px 7px rgba(0, 0, 0, 0.2);
       display: flex;
       flex-direction: column;
     }
     
     @media (min-width: 900px) {
-      .pricing-table {
+      .filtering-table {
         flex-direction: row;
       }
     }
     
-    .pricing-table * {
+    .filtering-table * {
       text-align: center;
       text-transform: uppercase;
     }
     
-    .pricing-plan {
+    .filtering-plan {
       border-bottom: 1px solid #e1f1ff;
       padding: 25px;
     }
     
-    .pricing-plan:last-child {
+    .filtering-plan:last-child {
       border-bottom: none;
     }
     
     @media (min-width: 900px) {
-      .pricing-plan {
+      .filtering-plan {
         border-bottom: none;
         border-right: 1px solid #e1f1ff;
         flex-basis: 100%;
         padding: 25px 50px;
       }
     
-      .pricing-plan:last-child {
+      .filtering-plan:last-child {
         border-right: none;
       }
     }
     
-    .pricing-img {
+    .filtering-img {
   margin-bottom: 25px;
   width: 100%;
-  height: 180px; /* Adjust the height as needed */
+  height: 180px; 
   border-radius: 50%;
   overflow: hidden;
 }
 
-.pricing-img img {
+.filtering-img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
     
-    .pricing-header {
+    .filtering-header {
       color: #282424;
       font-weight: 600;
       letter-spacing: 1px;
     }
     
-    .pricing-features {
+    .filtering-features {
       color: black;
       font-weight: 600;
       letter-spacing: 1px;
       margin: 50px 0 25px;
     }
     
-    .pricing-features-item {
+    .filtering-features-item {
       border-top: 1px solid #e1f1ff;
       font-size: 12px;
       line-height: 1.5;
       padding: 15px 0;
     }
     
-    .pricing-features-item:last-child {
+    .filtering-features-item:last-child {
       border-bottom: 1px solid #e1f1ff;
     }
     
-    .pricing-price {
+    .filtering-price {
       color: black;
       display: block;
       font-size: 32px;
       font-weight: 700;
     }
     
-    .pricing-button {
+    .filtering-button {
       border: 1px solid #9dd1ff;
       border-radius: 10px;
       color: #050505;
@@ -149,18 +148,18 @@
       transition: all 150ms ease-in-out;
     }
     
-    .pricing-button:hover,
-    .pricing-button:focus {
+    .filtering-button:hover,
+    .filtering-button:focus {
       background-color: #e1f1ff;
     }
     
-    .pricing-button.is-featured {
+    .filtering-button.is-featured {
       background-color: rgb(42, 193, 59);
       color: #fff;
     }
     
-    .pricing-button.is-featured:hover,
-    .pricing-button.is-featured:active {
+    .filtering-button.is-featured:hover,
+    .filtering-button.is-featured:active {
       background-color: #070707;
     }
     .filtered-image-container {
@@ -183,41 +182,41 @@
 <body>
   <div class="background">
     <div class="container">
-      <div class="panel pricing-table">
+      <div class="panel filtering-table">
 
-        <div class="pricing-plan">
-          <img src="https://i.ibb.co/3zkv42y/bw.jpg" alt="" class="pricing-img">
-          <h2 class="pricing-header">B&W</h2>
-          <ul class="pricing-features">
-            <li class="pricing-features-item">Turns colored image into black and white</li>
+        <div class="filtering-plan">
+          <img src="https://i.ibb.co/3zkv42y/bw.jpg" alt="" class="filtering-img">
+          <h2 class="filtering-header">B&W</h2>
+          <ul class="filtering-features">
+            <li class="filtering-features-item">Turns colored image into black and white</li>
           </ul>
           <form action="{{ url_for('filter') }}" method="POST">
             <input type="hidden" name="filter_option" value="black_white">
-            <button type="submit" class="pricing-button is-featured">Use</button>
+            <button type="submit" class="filtering-button is-featured">Use</button>
           </form>
         </div>
 
-        <div class="pricing-plan">
-          <img src="https://i.ibb.co/4P65NpM/exp.jpg" alt="" class="pricing-img">
-          <h2 class="pricing-header">Exposure</h2>
-          <ul class="pricing-features">
-            <li class="pricing-features-item">Increases the exposure of the image</li>
+        <div class="filtering-plan">
+          <img src="https://i.ibb.co/4P65NpM/exp.jpg" alt="" class="filtering-img">
+          <h2 class="filtering-header">Exposure</h2>
+          <ul class="filtering-features">
+            <li class="filtering-features-item">Increases the exposure of the image</li>
           </ul>
           <form action="{{ url_for('filter') }}" method="POST">
-            <input type="hidden" name="filter_option" value="vintage">
-            <button type="submit" class="pricing-button is-featured">Use</button>
+            <input type="hidden" name="filter_option" value="exposure">
+            <button type="submit" class="filtering-button is-featured">Use</button>
           </form>
         </div>
 
-        <div class="pricing-plan">
-          <img src="https://i.ibb.co/41L4nz3/pnt.jpg" alt="" class="pricing-img">
-          <h2 class="pricing-header">Painting</h2>
-          <ul class="pricing-features">
-            <li class="pricing-features-item">Turns given image into oil paintiing style</li>
+        <div class="filtering-plan">
+          <img src="https://i.ibb.co/41L4nz3/pnt.jpg" alt="" class="filtering-img">
+          <h2 class="filtering-header">Painting</h2>
+          <ul class="filtering-features">
+            <li class="filtering-features-item">Turns given image into oil paintiing style</li>
           </ul>
           <form action="{{ url_for('filter') }}" method="POST">
             <input type="hidden" name="filter_option" value="painting">
-            <button type="submit" class="pricing-button is-featured">Use</button>
+            <button type="submit" class="filtering-button is-featured">Use</button>
           </form>
         </div>
 
@@ -234,11 +233,11 @@
   <script>
     window.addEventListener('DOMContentLoaded', (event) => {
       const filteredImageContainer = document.querySelector('.filtered-image-container');
-      const pricingTable = document.querySelector('.pricing-table');
+      const filteringTable = document.querySelector('.filtering-table');
 
-      // Hide pricing table and show filtered image container if the filtered image is present
+      // Hide filtering table and show filtered image container if the filtered image is present
       if (filteredImageContainer.innerHTML.trim() !== '') {
-        pricingTable.style.display = 'none';
+        filteringTable.style.display = 'none';
         filteredImageContainer.style.display = 'flex';
       }
     });
