--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ChromaCraft</title>
+    <link rel = "icon" href = 
+    "https://i.ibb.co/8bVvLYk/logo.png" 
+        type = "image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
   <body>
@@ -12,6 +15,7 @@
         <a href="/"><img src="https://i.ibb.co/8bVvLYk/logo.png" alt="logo" width="33" height="35"></a>
       </div>
     </nav>
+    
   <div class="container my-3">
           <h1 class="fs-2 text">ChromaCraft</h1>
 
@@ -34,6 +38,27 @@
       <button type="submit" class="btn btn-dark">Submit</button>
       </form>
   </div>
+  {% with messages = get_flashed_messages() %}
+  {% if messages %}
+      {% for message in messages %}
+          <div class="alert alert-danger" role="alert"
+              style="position: absolute; top: 330px; left: 120px; width: 350px;">
+              {{ message }}
+          </div>
+      {% endfor %}
+  {% endif %}
+  {% endwith %}
+  
+  {% with op_messages = get_flashed_messages(category_filter=['op_error']) %}
+  {% if op_messages %}
+      {% for op_message in op_messages %}
+          <div class="alert alert-danger" role="alert"
+              style="position: absolute; top: 400px; left: 120px; width: 350px;">
+              {{ op_message }}
+          </div>
+      {% endfor %}
+  {% endif %}
+{% endwith %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
