--- a/templates/filter.html
+++ b/templates/filter.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>filtering Table</title>
+  <title>Filters</title>
   <style>
     html {
       box-sizing: border-box;
@@ -20,15 +20,21 @@
     }
     
     .background::after {
-  content: '';
-  background: rgb(58, 202, 79);
-  height: 30%;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  z-index: -1;
-}
+      content: '';
+      background: rgb(58, 202, 79);
+      height: 30%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      z-index: -1;
+    }
+
+    .logo {
+        position: absolute;
+        top: 10px;
+        right: 15px;
+        }
 
     
     @media (min-width: 900px) {
@@ -93,18 +99,18 @@
     }
     
     .filtering-img {
-  margin-bottom: 25px;
-  width: 100%;
-  height: 180px; 
-  border-radius: 50%;
-  overflow: hidden;
-}
+      margin-bottom: 25px;
+      width: 100%;
+      height: 180px; 
+      border-radius: 50%;
+      overflow: hidden;
+    }
 
-.filtering-img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+    .filtering-img img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
     
     .filtering-header {
       color: #282424;
@@ -138,7 +144,7 @@
     }
     
     .filtering-button {
-      border: 1px solid #9dd1ff;
+      border: 1px solid #060606;
       border-radius: 10px;
       color: #050505;
       display: inline-block;
@@ -154,20 +160,20 @@
     }
     
     .filtering-button.is-featured {
-      background-color: rgb(42, 193, 59);
+      background-color: rgb(0, 0, 0);
       color: #fff;
     }
     
     .filtering-button.is-featured:hover,
     .filtering-button.is-featured:active {
-      background-color: #070707;
+      background-color: rgb(42, 193, 59);
+      border: 1px solid rgb(42, 193, 59);
     }
     .filtered-image-container {
       display: none;
       justify-content: center;
       align-items: center;
       margin-top: 50px;
-      background-color: white;
       z-index: 9999;
     }
     
@@ -177,10 +183,66 @@
       max-height: 400px;
       border-radius: 10px;
     }
+
+    html {
+    height:100%;
+    }
+
+    body {
+      margin:0;
+    }
+
+    .bg {
+      animation:slide 3s ease-in-out infinite alternate;
+      background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
+      bottom:0;
+      left:-50%;
+      opacity:.5;
+      position:fixed;
+      right:-50%;
+      top:0;
+      z-index:-1;
+    }
+
+    .bg2 {
+      animation-direction:alternate-reverse;
+      animation-duration:4s;
+    }
+
+    .bg3 {
+      animation-duration:5s;
+    }
+
+    .content {
+      background-color:rgba(255,255,255,.8);
+      border-radius:.25em;
+      box-shadow:0 0 .25em rgba(0,0,0,.25);
+      box-sizing:border-box;
+      left:50%;
+      padding:10vmin;
+      position:fixed;
+      text-align:center;
+      top:50%;
+      transform:translate(-50%, -50%);
+    }
+
+    h1 {
+      font-family:monospace;
+    }
+
+    @keyframes slide {
+      0% {
+        transform:translateX(-25%);
+      }
+      100% {
+        transform:translateX(25%);
+      }
+    }
   </style>
 </head>
 <body>
-  <div class="background">
+  <a href="/" class="logo"><img src=https://i.ibb.co/mckzg6x/logo-removebg-preview.png" alt="logo" width="33" height="35"></a>
+  <div class="backgroun">
     <div class="container">
       <div class="panel filtering-table">
 
@@ -229,6 +291,10 @@
       <img src="{{ url_for('static', filename=filtered_filename) }}" alt="Filtered Image">
     {% endif %}
   </div>
+
+  <div class="bg"></div>
+  <div class="bg bg2"></div>
+  <div class="bg bg3"></div>
 
   <script>
     window.addEventListener('DOMContentLoaded', (event) => {
