--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,89 @@
     "https://i.ibb.co/8bVvLYk/logo.png" 
         type = "image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <style>
+      .form-control {
+      max-width: 1100px; 
+      }
+
+      .form-select {
+      max-width: 1100px; 
+      }
+
+      .btn-dark {
+      margin-top: 20px; 
+      }
+
+      .btn-dark:hover {
+      background-color: rgb(42, 193, 59); 
+      border-color: rgb(0, 0, 0);
+      }
+
+      html 
+        {
+          height:100%;
+        }
+
+        body {
+          margin:0;
+        }
+
+        .bg {
+          animation:slide 3s ease-in-out infinite alternate;
+          background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
+          bottom:0;
+          left:-50%;
+          opacity:.5;
+          position:fixed;
+          right:-50%;
+          top:0;
+          z-index:-1;
+        }
+
+        .bg2 {
+          animation-direction:alternate-reverse;
+          animation-duration:4s;
+        }
+
+        .bg3 {
+          animation-duration:5s;
+        }
+
+        .content {
+          background-color:rgba(255,255,255,.8);
+          border-radius:.25em;
+          box-shadow:0 0 .25em rgba(0,0,0,.25);
+          box-sizing:border-box;
+          left:50%;
+          padding:10vmin;
+          position:fixed;
+          text-align:center;
+          top:70%;
+          transform:translate(-50%, -50%);
+        }
+
+        h1 {
+          margin-top: 115px;
+        }
+
+        .logo {
+        position: absolute;
+        top: 10px;
+        right: 15px;
+        }
+
+        @keyframes slide {
+          0% {
+            transform:translateX(-25%);
+          }
+          100% {
+            transform:translateX(25%);
+          }
+        }
+    </style>
   </head>
   <body>
-    <nav class="navbar bg-body-tertiary">
-      <div class="container-fluid">
-        <a href="/"><img src="https://i.ibb.co/8bVvLYk/logo.png" alt="logo" width="33" height="35"></a>
-      </div>
-    </nav>
+        <a href="/" class="logo"><img src=https://i.ibb.co/mckzg6x/logo-removebg-preview.png" alt="logo" width="33" height="35"></a>
     
   <div class="container my-3">
           <h1 class="fs-2 text">ChromaCraft</h1>
@@ -38,11 +114,14 @@
       <button type="submit" class="btn btn-dark">Submit</button>
       </form>
   </div>
+  <div class="bg"></div>
+  <div class="bg bg2"></div>
+  <div class="bg bg3"></div>
   {% with messages = get_flashed_messages() %}
   {% if messages %}
       {% for message in messages %}
           <div class="alert alert-danger" role="alert"
-              style="position: absolute; top: 330px; left: 120px; width: 350px;">
+              style="position: absolute; top: 400px; left: 120px; width: 350px;">
               {{ message }}
           </div>
       {% endfor %}
