--- a/templates/resize.html
+++ b/templates/resize.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Resized Image</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
+        .logo {
+        position: absolute;
+        top: 10px;
+        right: 15px;
+        }
+
+        .resize-image-text {
+        font-family: Calibri;
+        text-align: center;
+        font-weight: bold;
+        margin-bottom: 30px;
+        }
+
         .container {
             display: flex;
             flex-direction: column;
@@ -31,11 +45,78 @@
         .hidden {
             display: none;
         }
+
+        .btn-primary {
+        background-color: #060606;
+        border-color: #050505;
+        }
+
+        .btn-primary:hover {
+            background-color: rgb(42, 193, 59); /* Green color when hovering */
+            border-color: rgb(0, 0, 0);
+        }
+
+        html 
+        {
+        height:100%;
+        }
+
+        body {
+        margin:0;
+        }
+
+        .bg {
+        animation:slide 3s ease-in-out infinite alternate;
+        background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
+        bottom:0;
+        left:-50%;
+        opacity:.5;
+        position:fixed;
+        right:-50%;
+        top:0;
+        z-index:-1;
+        }
+
+        .bg2 {
+        animation-direction:alternate-reverse;
+        animation-duration:4s;
+        }
+
+        .bg3 {
+        animation-duration:5s;
+        }
+
+        .content {
+        background-color:rgba(255,255,255,.8);
+        border-radius:.25em;
+        box-shadow:0 0 .25em rgba(0,0,0,.25);
+        box-sizing:border-box;
+        left:50%;
+        padding:10vmin;
+        position:fixed;
+        text-align:center;
+        top:50%;
+        transform:translate(-50%, -50%);
+        }
+
+        h1 {
+        font-family:monospace;
+        }
+
+        @keyframes slide {
+        0% {
+            transform:translateX(-25%);
+        }
+        100% {
+            transform:translateX(25%);
+        }
+        }
     </style>
 </head>
 <body>
+    <a href="/" class="logo"><img src=https://i.ibb.co/mckzg6x/logo-removebg-preview.png" alt="logo" width="33" height="35"></a>
     <div class="container">
-        <h1 class="{% if resized_filename %}hidden{% endif %}">Resize Image</h1>
+        <h1 class="{% if resized_filename %}hidden{% endif %} resize-image-text">Resize Image</h1>
         <form method="post" action="{{ url_for('resize') }}" class="{% if resized_filename %}hidden{% endif %} resize-form">
             <div class="row">
                 <div class="col">
@@ -54,5 +135,8 @@
             </div>
         {% endif %}
     </div>
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
 </body>
 </html>
